Archive2/6d/66e18798a8c165/output
In file included from /usr/local/include/c++/4.9.0/cassert:43:0,
                 from main.cpp:1:
main.cpp: In function 'int main()':
main.cpp:9:39: error: cannot dynamic_cast 'obj' (of type 'struct Base') to type 'struct Derived&' (source type is not polymorphic)
     assert(!dynamic_cast<Derived&>(obj));
                                       ^
