Archive2/6d/66e18798a8c165/main.cpp
#include <cassert>

struct Base {};
struct Derived : Base {};

int main()
{
    Base obj;
    assert(!dynamic_cast<Derived&>(obj));
}
